...
	enum ExposureNotificationSetting {
		static let descriptionTitleInactive = "AppStrings.ExposureNotificationSetting.descriptionTitleInactive"
		static let descriptionTitle = "AppStrings.ExposureNotificationSetting.descriptionTitle"
		static let descriptionText1 = "AppStrings.ExposureNotificationSetting.descriptionText1"
		static let descriptionText2 = "AppStrings.ExposureNotificationSetting.descriptionText2"
...
		static let activateCardBluetoothOffTitle = "AppStrings.Home.activateCardBluetoothOffTitle"
		static let riskCardIntervalUpdateTitle = "AppStrings.Home.riskCardIntervalUpdateTitle"
		static let tableView = "AppStrings.Home.tableView"

		enum AppClosureNoticeCell {
...
			static let titleLabel = "AppStrings.Home.TestRegistrationCell.titleLabel"
			static let descriptionLabel = "AppStrings.Home.TestRegistrationCell.descriptionLabel"
			static let submitCardButton = "AppStrings.Home.TestRegistrationCell.submitCardButton"
		}
		
...
	
	enum ContactDiaryInformation {
		static let imageDescription = "AppStrings.ContactDiaryInformation.imageDescription"
		static let descriptionTitle = "AppStrings.ContactDiaryInformation.descriptionTitle"
		static let descriptionSubHeadline = "AppStrings.ContactDiaryInformation.descriptionSubHeadline"
		static let dataPrivacyTitle = "AppStrings.ContactDiaryInformation.dataPrivacyTitle"
		static let legal_1 = "AppStrings.ContactDiaryInformation.legalHeadline_1"
		
...
			static let tableView = "AppStrings.ContactDiary.EditEntries.tableView"
			static let nameTextField = "AppStrings.ContactDiary.EditEntries.nameTextField"
			static let phoneNumberTextField = "AppStrings.ContactDiary.EditEntries.phoneNumberTextField"
			static let eMailTextField = "AppStrings.ContactDiary.EditEntries.eMailTextField"
		}
...
		static let imprintSection4Title = "AppStrings.AppInformation.imprintSection4Title"
		static let imprintSection4Text = "AppStrings.AppInformation.imprintSection4Text"
		static let privacyImageDescription = "AppStrings.AppInformation.privacyImageDescription"
		static let privacyTitle = "AppStrings.AppInformation.privacyTitle"
		static let termsImageDescription = "AppStrings.AppInformation.termsImageDescription"
...
		static let accImageDescription = "AppStrings.SRSConsentScreen.accImageDescription"
		static let headerSection1 = "AppStrings.SRSConsentScreen.headerSection1"
		static let acknowledgementTitle = "AppStrings.SRSConsentScreen.acknowledgementTitle"
		static let dataProcessingDetailInfoButton = "AppStrings.SRSConsentScreen.dataProcessingDetailInfoButton"
	}
...
				static let acknowledgementTitle = "AntigenTest_Information_acknowledgement_title"
				static let dataPrivacyTitle = "AppStrings.ExposureSubmission.AntigenTest.Information.dataPrivacyTitle"
				static let continueButton = "AppStrings.ExposureSubmission.AntigenTest.Information.primaryButton"
			}
			
			enum Create {
				static let saveButton = "AppStrings.AntigenProfile.Create.saveButtonTitle"
			}
			
			enum Profile {
				static let profileTile_Description = "AppStrings.ExposureSubmission.AntigenTest.Profile.profileTile_Description"
				static let createProfileTile_Description = "AppStrings.ExposureSubmission.AntigenTest.Profile.createProfileTile_Description"
				static let continueButton = "AppStrings.ExposureSubmission.AntigenTest.Profile.primaryButton"
				static let editButton = "AppStrings.ExposureSubmission.AntigenTest.Profile.secondaryButton"
				static let deleteAction = "AppStrings.ExposureSubmission.AntigenTest.Profile.deleteAction"
				static let editAction = "AppStrings.ExposureSubmission.AntigenTest.Profile.editAction"
...
		static let image = "ExposureSubmissionIntroViewController.image"
		
		static let primaryFooterButton = "General.primaryFooterButton"
		static let secondaryFooterButton = "General.secondaryFooterButton"
		static let cancelButton = "General.cancelButton"
		static let defaultButton = "General.defaultButton"
...
			static let title = "AppStrings.AntigenProfile.Create.title"
			static let description = "AppStrings.AntigenProfile.Create.description"
			static let firstNameTextField = "AppStrings.AntigenProfile.Create.firstNameTextFieldPlaceholder"
			static let lastNameTextField = "AppStrings.AntigenProfile.Create.lastNameTextFieldPlaceholder"
			static let birthDateTextField = "AppStrings.AntigenProfile.Create.birthDateTextFieldPlaceholder"
			static let streetTextField = "AppStrings.AntigenProfile.Create.streetTextFieldPlaceholder"
			static let postalCodeTextField = "AppStrings.AntigenProfile.Create.postalCodeTextFieldPlaceholder"
			static let cityTextField = "AppStrings.AntigenProfile.Create.cityTextFieldPlaceholder"
			static let phoneNumberTextField = "AppStrings.AntigenProfile.Create.phoneNumberTextFieldPlaceholder"
			static let emailAddressTextField = "AppStrings.AntigenProfile.Create.emailAddressTextFieldPlaceholder"
			static let saveButtonTitle = "AppStrings.AntigenProfile.Create.saveButtonTitle"
		}
...
			static let addButton = "AppStrings.AntigenProfile.AddButton"
			static let tableView = "TableView.AntigenProfileOverview"
			static let antigenTestPersonProfileCell = "AppStrings.AntigenProfile.Overview.antigenTestPersonProfileCell"
			static let emptyStateTitle = "AppStrings.AntigenProfile.Overview.emptyStateTitle"
			static let emptyStateDescription = "AppStrings.AntigenProfile.Overview.emptyStateDescription"
...
